# dbus-canopen-motordrive

./: .clang-format  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  configure.sh  docker-compose.yml  rules.mk
.github/workflows/: clang-format.yml  tests.yml
archive/dbus-canopen-motordrive/: run
archive/dbus-sevcon/: run
archive/rc/: post-hook.sh
inc/: array.h  canopen.h  curtis.h  device.h  discovery.h  driver.h  list.h  localsettings.h  logger.h  memory.h  node.h  notification.h  platform.h  servicemanager.h  sevcon.h
inc/drivers/: curtis_e.h  curtis_f.h  emsiso.h  sevcon.h
inc/velib/: velib_config_app.h
scripts/: build.sh  check-formatting.sh  compile.sh  pack.sh  shell.sh  test.sh  up.sh
src/: array.c  canopen.c  curtis.c  device.c  discovery.c  helloworld.c  list.c  localsettings.c  memory.c  node.c  notification.c  platform.c  rules.mk  servicemanager.c  sevcon.c  task.c
src/drivers/: curtis.c  curtis_e.c  curtis_f.c  emsiso.c  rules.mk  sevcon.c
tests/: BaseFixture.hpp  CMakeLists.txt  CanFixture.hpp  environment.cpp  environment.hpp  fff.h  test_array.cpp  test_canopen.cpp  test_curtis_e.cpp  test_curtis_f.cpp  test_device.cpp  test_discovery.cpp  test_emsiso.cpp  test_list.cpp  test_localsettings.cpp  test_node.cpp  test_platform.cpp  test_servicemanager.cpp  test_sevcon.cpp
tools/simulators/: curtis_e.eds  curtis_e.py  curtis_f.eds  curtis_f.py  emsiso.eds  emsiso.py  sevcon_gen4.eds  sevcon_gen4.py
